RESOLVED FIXED86408
Increase Debug Logging in MarkStack::validate()
https://bugs.webkit.org/show_bug.cgi?id=86408
Summary Increase Debug Logging in MarkStack::validate()
Michael Saboff
Reported 2012-05-14 16:18:48 PDT
Improve the diagnostic information in MarkStack::validate() beyond crashing.
Attachments
Patch (2.34 KB, patch)
2012-05-14 16:23 PDT, Michael Saboff
no flags
Michael Saboff
Comment 1 2012-05-14 16:23:49 PDT
Filip Pizlo
Comment 2 2012-05-14 16:29:00 PDT
Comment on attachment 141806 [details] Patch rs=me, but change to dataLog().
Michael Saboff
Comment 3 2012-05-14 16:44:58 PDT
Eric Seidel (no email)
Comment 4 2012-05-21 15:22:14 PDT
Comment on attachment 141806 [details] Patch Cleared review? from attachment 141806 [details] so that this bug does not appear in http://webkit.org/pending-review. If you would like this patch reviewed, please attach it to a new bug (or re-open this bug before marking it for review again).
Note You need to log in before you can comment on or make changes to this bug.