Increase Debug Logging in MarkStack::validate() https://bugs.webkit.org/show_bug.cgi?id=86408

Rubber-stamped by Filip Pizlo.

Added some descriptive debug messages for the conditions and
values when a cell validation fails.

* heap/MarkStack.cpp:
(JSC::MarkStack::validate):


Canonical link: https://commits.webkit.org/104005@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117013 268f45cc-cd09-0410-ab3c-d52691b4dbfc